@@ -15,7 +15,8 @@
     <name>tp22-23</name>
     <description>Trabajo final de DBD 2022/23</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>19</java.version>
+
     </properties>
     <dependencies>
         <dependency>
@@ -102,6 +103,21 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>--enable-preview</jvmArguments>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>19</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
